# CMake-Good

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
say-hello/: CMakeLists.txt  Makefile  cmake_install.cmake  hello.cpp  hello.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
